<resources>
    <string name="app_name">FitnessApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be less than 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>


    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>


    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="satellite">Satellites</string>

    <string name="waiting_for_fix">Waiting for GPS fix …</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="please_enable_gps">In order to use this app you need the GPS to be enabled.</string>

    <string name="running">Route in process…</string>
    <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>

    <string name="settings">Settings</string>
    <string name="app_info">About this app</string>
    <string name="pref_auto_average">Automatically detect stop time.</string>
    <string name="pref_auto_average_summary">The time spent at stop will not count in the average speed.</string>
    <string name="pref_miles_per_hour">Use miles per hour</string>
    <string name="pref_miles_per_hour_summary">Display the speed in mi/h instead of km/h</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">GitHub</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Speedmeter Version</string>

    <string name="noti_id" translatable="false">Speedmeterisanid</string>
    <string name="github" translatable="false">https://github.com/flyingrub/SpeedMeter</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="doante_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>


    <!-- AppBar titles -->

    <string name="stats">Statistics summary</string>

    <!-- Snackbar messages -->
    <string name="start">Tracking started!</string>
    <string name="granted">GPS access granted!</string>
    <string name="denied">GPS access denied…</string>

    <!-- Statistics -->
    <string name="current_speed">Current speed:&#160;</string>
    <string name="total_distance">Total distance:&#160;</string>

    <string name="elapsed_time">Elapsed time:&#160;</string>
    <string name="time_per_km">Seconds per kilometer&#160;</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hint_minute">Minute</string>
    <string name="settings_timer">Timer</string>
    <string name="settings_notifications">Notifications</string>
</resources>
