<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:keepScreenOn="true"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        android:elevation="5dp">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/toolbarSpeed"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:elevation="5dp"
        android:layout_margin="10dp"
        >

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="10dp"
            android:background="#ffffff"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/currentSpeed"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="80sp"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
android:gravity="center"
    >

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:onClick="onFabClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black_24dp"

        android:layout_gravity="center_vertical"
        fab:fab_colorNormal="#000000"
        fab:fab_colorPressed="#000000"
        fab:fab_colorRipple="#000000"
        android:layout_margin="5dp"



        />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/refresh"
        android:onClick="onRefreshClick"
        fab:fab_type="mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_refresh_black_24dp"
        android:layout_gravity="center_vertical"
        fab:fab_colorNormal="#000000"
        fab:fab_colorPressed="#000000"
        fab:fab_colorRipple="#000000"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:layout_above="@+id/fab"
        android:visibility="gone"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:layout_margin="10dp"
        >

    <TextView
        android:id="@+id/titleMaxSpeed"
        android:text="@string/max_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_below="@id/toolbarSpeed"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
   />

    <TextView
        android:id="@+id/maxSpeed"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_below="@id/toolbarSpeed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
    />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:layout_margin="10dp"
        >
    <TextView
        android:id="@+id/titleAverageSpeed"
        android:text="@string/average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:padding="10dp"

      />

    <TextView
        android:id="@+id/averageSpeed"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:layout_margin="10dp"
        >
    <TextView
        android:id="@+id/titleDistance"
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:padding="10dp"

    />

    <TextView
        android:id="@+id/distance"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
       />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:layout_margin="10dp"
        >
    <TextView
        android:id="@+id/titleTime"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:padding="10dp"
     />

    <Chronometer
        android:id="@+id/time"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
      />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:layout_margin="10dp"
        >
    <TextView
        android:id="@+id/titleAccuracy"
        android:text="@string/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:padding="10dp"
     />

    <TextView
        android:id="@+id/accuracy"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:layout_marginLeft="20dp"
 />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#000000"
        android:layout_margin="10dp"
        >
    <TextView
        android:id="@+id/titleSatellite"
        android:text="@string/satellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:padding="10dp"
   />

    <TextView
        android:id="@+id/satellite"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
    />
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:text="@string/waiting_for_fix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:layout_below="@+id/separator6"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

</LinearLayout>